Set file encoding to `UTF-8` for tests execution in Tycho
* Had to change the return type of the Snowman to `AnyRef` for
  the test to pass against both Scala 2.9 and Scala 2.10 (the
  returned name for the `String` type is different in 2.9 and
  2.10)

* Pass `-Dfile.encoding=UTF-8` to Tycho test task.
* Re-enabled encoding test.

Fix #120