@@ -18,6 +18,11 @@
   <name>Scala Worksheet</name>
   <packaging>pom</packaging>
 
+  <properties>
+    <tycho.test.encoding>-Dfile.encoding=UTF-8</tycho.test.encoding>
+    <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dsdtcore.headless ${tycho.test.encoding} ${tycho.test.weaving} ${tycho.test.OSspecific}</tycho.test.jvmArgs>
+  </properties>
+
   <modules>
     <module>org.scalaide.worksheet.runtime.library</module>
     <module>org.scalaide.worksheet</module>
